# desida

./: .gitignore  LICENSE.rst  README.rst  github_workflows_run-desida.yml  setup.cfg
.github/workflows/: main.yml
py/desida/: __init__.py  _version.py  archive_fiberassign.py  checksum.py  fiberassign.py  github.py  inventory.py  prodjobs.py
